pictures fit on screen

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<p>Wife and husband battle it out to see who can color and draw the best</p>
 	<h4>First submission</h4
 	<center><table>
-			<tr><td><img src=images/h1.jpg></td>
-			<td><img src=images/w1.jpg></td>
+			<tr><td><img src=images/h1.jpg width="450" height="450"></td>
+			<td><img src=images/w1.jpg width="450" height="450"></td>
 		</table>
 	</center>
 
