--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-<head>
-	<title>Drawpatition</title>
-	<meta charset="utf-8">
-</head>
-<body>
-	<h2>Welcome DRAWPATITION</h2>
-	<p>Wife and husband battle it out to see who can color and draw the best</p>
-	
-	<center><table>
-		<th colspan="2"><h1>First submission</h1></th>
-		<tr><td><img src=images/h1.jpg width="450" height="450"></td>
-			<td><img src=images/w1.jpg width="450" height="450"></td>
+<html>
+	<head>
+		<title>Drawpatition</title>
+		<meta charset="utf-8">
+	</head>
+	<body>
+		<h2>Welcome DRAWPATITION</h2>
+		<p>Wife and husband battle it out to see who can color and draw the best</p>
+
+		<table>
+			<th colspan="2">First submission</th>
+			<tr>
+				<td><img src=images/h1.jpg width="450" height="450"></td>
+				<td><img src=images/w1.jpg width="450" height="450"></td>
+			</tr>
 		</table>
-	</center>	
-</body>
+
+	</body>
+</html>
